--- a/simple-crud-table-with-jsf-and-primefaces/src/main/webapp/customers.xhtml
+++ b/simple-crud-table-with-jsf-and-primefaces/src/main/webapp/customers.xhtml
@@ -1,55 +1,109 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<h:head>
-</h:head>
-<h:body>
-    <p:outputPanel>
+<f:view contentType="text/html">
+    <h:head>
+        <h:outputStylesheet>
+            th, td {
+                text-align: center;
+            }
 
-        <h3 style="margin-top: 0; text-align: center">Customer Overview</h3>
-        <p:growl id="growl" life="2000" />
+            h3 {
+                margin-top: 0px;
+                text-align: center;
+            }
 
-        <div class="ui-g">
-            <div class="ui-g-2"></div>
-            <div class="ui-g-8">
-                <p:dataTable id="customers" var="customer" value="#{customersBacking.customers}">
-                    <p:column headerText="Id">
-                        <h:outputText value="#{customer.id}"/>
-                    </p:column>
+            input {
+                display: block;
+            }
 
-                    <p:column headerText="First name">
-                        <h:outputText value="#{customer.firstName}"/>
-                    </p:column>
+        </h:outputStylesheet>
+    </h:head>
+    <h:body>
+        <p:outputPanel>
+            <h3>Customer Overview</h3>
+            <div class="ui-g">
+                <div class="ui-g-2"></div>
+                <div class="ui-g-8">
+                    <h:form id="customers">
+                        <p:dataTable id="customerList" var="customer" value="#{customersBacking.customers}">
+                            <p:column headerText="Id">
+                                <h:outputText value="#{customer.id}"/>
+                            </p:column>
 
-                    <p:column headerText="Last name">
-                        <h:outputText value="#{customer.lastName}"/>
-                    </p:column>
+                            <p:column headerText="First name">
+                                <h:outputText value="#{customer.firstName}"/>
+                            </p:column>
 
-                    <p:column headerText="Email">
-                        <h:outputText value="#{customer.email}"/>
-                    </p:column>
+                            <p:column headerText="Last name">
+                                <h:outputText value="#{customer.lastName}"/>
+                            </p:column>
 
-                    <p:column headerText="Day of birth">
-                        <h:outputText value="#{customer.dayOfBirth}"/>
-                    </p:column>
+                            <p:column headerText="Email">
+                                <h:outputText value="#{customer.email}"/>
+                            </p:column>
 
-                    <p:column headerText="Customer ID">
-                        <h:outputText value="#{customer.customerId}"/>
-                    </p:column>
+                            <p:column headerText="Day of birth">
+                                <h:outputText value="#{customer.dayOfBirth}"/>
+                            </p:column>
 
-                    <p:column>
-                        <p:commandButton update="growl" value="submit" icon="ui-icon-closethick"
-                                         actionListener="#{customersBacking.buttonAction}" styleClass="ui-priority-primary" >
-                        </p:commandButton>
-                    </p:column>
-                </p:dataTable></div>
-            <div class="ui-g-2">
+                            <p:column headerText="Customer ID">
+                                <h:outputText value="#{customer.customerId}"/>
+                            </p:column>
+
+                            <p:column>
+                                <p:commandButton update="customerList" value="Delete" icon="ui-icon-closethick"
+                                                 actionListener="#{customersBacking.delete(customer)}"
+                                                 styleClass="ui-priority-primary">
+                                </p:commandButton>
+                            </p:column>
+                        </p:dataTable>
+                    </h:form>
+                </div>
+                <div class="ui-g-2">
+                </div>
             </div>
-        </div>
-    </p:outputPanel>
-</h:body>
+            <h3>Create a new customer</h3>
+            <div class="ui-g">
+                <div class="ui-g-2">
+                </div>
+                <div class="ui-g-8">
+                    <h:form id="add">
+
+                        <h:outputLabel for="firstName" value="First name"/>
+                        <h:inputText id="firstName" value="#{customersBacking.firstName}"/>
+                        <h:message for="firstName"/>
+
+                        <h:outputLabel for="lastName" value="Last name"/>
+                        <h:inputText id="lastName"
+                                         value="#{customersBacking.lastName}">
+                        </h:inputText>
+                        <h:message for="lastName"/>
+
+                        <h:outputLabel for="email" value="E-Mail"/>
+                        <h:inputText id="email"
+                                     value="#{customersBacking.email}">
+                        </h:inputText>
+                        <h:message for="email"/>
+
+                        <h:outputLabel for="dayOfBirth" value="Day of birth"/>
+                        <h:inputText id="dayOfBirth"
+                                     value="#{customersBacking.dayOfBirth}">
+                            <f:convertDateTime type="localDate" pattern="dd-MM-yyyy"/>
+                        </h:inputText>
+                        <h:message for="dayOfBirth"/>
+
+                        <p:commandButton update="@form :customers:customerList" value="Add"
+                                         action="#{customersBacking.add}">
+                        </p:commandButton>
+                    </h:form>
+                </div>
+                <div class="ui-g-2">
+                </div>
+            </div>
+        </p:outputPanel>
+    </h:body>
+</f:view>
 </html>
