--- a/simple-crud-table-with-jsf-and-primefaces/src/main/webapp/customers.xhtml
+++ b/simple-crud-table-with-jsf-and-primefaces/src/main/webapp/customers.xhtml
@@ -1,6 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <f:view contentType="text/html">
@@ -11,7 +10,7 @@
             }
 
             h3 {
-                margin-top: 0px;
+                margin-top: 0;
                 text-align: center;
             }
 
@@ -28,7 +27,7 @@
         <p:outputPanel>
             <h3>Customer Overview</h3>
             <div class="ui-g">
-                <div class="ui-g-2"></div>
+                <div class="ui-g-2"/>
                 <div class="ui-g-8">
                     <h:form id="customers">
                          <p:growl id="growl" sticky="true" />
