update blog post for file upload

--- a/java-ee-uploading-and-downloading-files-with-web-components/frontend/src/index.html
+++ b/java-ee-uploading-and-downloading-files-with-web-components/frontend/src/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>File Upload with Webcomponents</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>File Upload with Web Components</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-
 <body>
-    <p id="message"></p>
-    <form id="upload-form">
-        <input required id="file" type="file"></input>
-        <button type="submit" id="upload">Upload</button>
-    </form>
-    <button id="download">Download Random File</button>
-    <script src="app.js" type="module"></script>
-</body>
+    <div class="container">
+        <div class="row">
+            <div class="col-9  offset-md-1">
+                <h3 style="text-align:center">Up- and downloading files with Java EE and Web Components</h3>
+                <div id="message" role="alert"></div>
+                <upload-component caption="Upload"></upload-component>
+                <br/>
+                <download-component caption="Download random file"></download-component>
+            </div>
+        </div>
+    </div>
 
+    <script src="app.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+</body>
 </html>
