add links to blog and code

--- a/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/WEB-INF/common/footer.xhtml
+++ b/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/WEB-INF/common/footer.xhtml
@@ -12,11 +12,11 @@
 					<h3>Note:</h3>
 					<p>
 						Feel free to play around with this simple JSF application. Powered
-						by: Java 8, Java EE 8, PrimeFaces 7.0, OmniFaces 3.2 running on
-						Payara 5.191. Read my <a href="https://rieckpil.de/howto-create-nice-looking-jsf-2-3-applications-with-primefaces-7-0">blog post</a> for more
+						by: <strong>Java 8, Java EE 8, PrimeFaces 7.0, OmniFaces 3.2 running on
+						Payara 5.191</strong>. Read my <a href="https://rieckpil.de/howto-create-nice-looking-jsf-2-3-applications-with-primefaces-7-0">blog post</a> for more
 						information. The source code is available on <a
-							href="https://github.com/rieckpil/blog-tutorials/tree/master/nice-looking-jsf-apps-with-prime-faces-7">GitHub</a>.<strong>Data
-							reset after every 10 minutes</strong>
+							href="https://github.com/rieckpil/blog-tutorials/tree/master/nice-looking-jsf-apps-with-prime-faces-7">GitHub</a>. Data
+							reset after every 10 minutes
 					</p>
 				</div>
 			</div>
