--- a/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/createOrder.xhtml
+++ b/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/createOrder.xhtml
@@ -1,10 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui" xmlns:o="http://omnifaces.org/ui"
 	xmlns:of="http://omnifaces.org/functions">
-
 <h:head>
 	<title>PrimeFaces 7.0</title>
 </h:head>
@@ -17,7 +16,8 @@
 			<div class="ui-g-2"></div>
 			<div class="ui-g-8">
 				<h1 style="text-align: center">Create a new order</h1>
-				<p:panel id="order" header="Enter order data" style="margin-bottom:20px">
+				<p:panel id="order" header="Enter order data"
+					style="margin-bottom:20px">
 					<h:panelGrid columns="1" cellpadding="10">
 						<h:form>
 							<p:growl id="msgs" showDetail="true" sticky="true" />
