--- a/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/customers.xhtml
+++ b/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/customers.xhtml
@@ -1,10 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui" xmlns:o="http://omnifaces.org/ui"
 	xmlns:of="http://omnifaces.org/functions">
-
 <h:head>
 	<title>PrimeFaces 7.0</title>
 	<h:outputStylesheet>
