--- a/websockets-with-jakarta-ee/src/main/webapp/index.html
+++ b/websockets-with-jakarta-ee/src/main/webapp/index.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"></meta>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Jakarta EE WebSockets</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+          integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
+          integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
 </head>
 <body>
 <div>
-    <input type="text" id="ws_message">
-    <input type="submit" value="Send message" onclick="send()"/>
+    <div class="container">
+        <div class="row">
+            <h3 class="text-center">Jakarta EE WebSocket example</h3>
+            <div class="col-md-8 col-md-offset-2">
+                <form class="form-inline" onsubmit="send(); return false;">
+                    <div class="form-group">
+                        <label class="sr-only" for="stockName">Stock</label>
+                        <input type="text" class="form-control" id="stockName" placeholder="Stock">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="stockPrice">Price</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="stockPrice" placeholder="Price">
+                            <div class="input-group-addon">$</div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send new stock information</button>
+                </form>
+                <br/>
+                <div class="alert alert-success" role="alert" id="connectionMessage"></div>
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th class="text-center">Stock</th>
+                        <th class="text-center">Price</th>
+                    </tr>
+                    </thead>
+                    <tbody id="stockInformation">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
 </div>
-<div id="messages"></div>
 <script language="javascript" type="text/javascript">
-    var webSocket = new WebSocket('ws://localhost:9080/stocks');
+    const webSocket = new WebSocket('ws://localhost:9080/stocks');
+
     webSocket.onerror = function (event) {
         onError(event)
     };
@@ -23,11 +64,12 @@
     };
 
     function onMessage(event) {
-        document.getElementById('messages').innerHTML += '<br />' + event.data;
+        const eventPayload = JSON.parse(event.data);
+        document.getElementById('stockInformation').innerHTML += `<tr><td>${eventPayload.stock}</td><td>${eventPayload.price} $</td></tr>`;
     }
 
     function onOpen(event) {
-        document.getElementById('messages').innerHTML = 'Connection established';
+        document.getElementById('connectionMessage').innerHTML = 'Connection established';
     }
 
     function onError(event) {
@@ -35,11 +77,20 @@
     }
 
     function send() {
-        var txt = document.getElementById('ws_message').value;
-        webSocket.send(txt);
-        return false;
+        const payload = {
+            'stock': document.getElementById('stockName').value,
+            'price': document.getElementById('stockPrice').value
+        };
+
+        webSocket.send(JSON.stringify(payload));
     }
 </script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+        crossorigin="anonymous"></script>
 </body>
 </html>
 
