--- a/kotlin-javascript-transpiling-gradle/src/main/resources/index.html
+++ b/kotlin-javascript-transpiling-gradle/src/main/resources/index.html
@@ -33,7 +33,29 @@
     </thead>
     <tbody id="tableBody"></tbody>
   </table>
-  <canvas id="myCanvas"></canvas>
+
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch Canvas
+  </button>
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Canvas Element with Kotlin</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body mx-auto">
+          <canvas id="myCanvas"></canvas>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
