polish JSF 2.3 and PrimeFaces examples

--- a/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/createOrder.xhtml
+++ b/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/createOrder.xhtml
@@ -5,7 +5,7 @@
 	xmlns:p="http://primefaces.org/ui" xmlns:o="http://omnifaces.org/ui"
 	xmlns:of="http://omnifaces.org/functions">
 <h:head>
-	<title>PrimeFaces 7.0</title>
+	<title>JSF and PrimeFaces</title>
 </h:head>
 <h:body>
 	<p:outputPanel>
