--- a/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/WEB-INF/common/header.xhtml
+++ b/nice-looking-jsf-apps-with-prime-faces-7/src/main/webapp/WEB-INF/common/header.xhtml
@@ -1,31 +1,36 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui" xmlns:o="http://omnifaces.org/ui"
-	xmlns:of="http://omnifaces.org/functions">
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core"
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	  xmlns:p="http://primefaces.org/ui" xmlns:o="http://omnifaces.org/ui"
+	  xmlns:of="http://omnifaces.org/functions">
 <body>
-	<ui:composition>
-		<h:form>
-			<p:growl id="messages" />
+<ui:composition>
+	<h:outputStylesheet>
+		body .ui-menu {
+			border: none !important;
+		}
+	</h:outputStylesheet>
+	<h:form>
+		<p:growl id="messages"/>
 
-			<p:menubar>
-				<p:menuitem value="Home" icon="pi pi-home" url="/index.xhtml">
-				</p:menuitem>
+		<p:menubar>
+			<p:menuitem value="Home" icon="pi pi-home" url="/index.xhtml">
+			</p:menuitem>
 
-				<p:menuitem value="Customers" icon="pi pi-users"
-					url="/customers.xhtml">
-				</p:menuitem>
+			<p:menuitem value="Customers" icon="pi pi-users"
+						url="/customers.xhtml">
+			</p:menuitem>
 
-				<p:menuitem value="Create Order" icon="pi pi-shopping-cart"
-					url="/createOrder.xhtml">
-				</p:menuitem>
+			<p:menuitem value="Create Order" icon="pi pi-shopping-cart"
+						url="/createOrder.xhtml">
+			</p:menuitem>
 
-				<p:menuitem value="Visit my blog" icon="pi pi-external-link"
-					url="https://rieckpil.de">
-				</p:menuitem>
+			<p:menuitem value="Visit my blog" icon="pi pi-external-link"
+						url="https://rieckpil.de">
+			</p:menuitem>
 
-				<p:menuitem value="(right side are just dummy buttons)">
+			<p:menuitem value="(right side are just dummy buttons)">
 				</p:menuitem>
 				<p:submenu label="File" icon="pi pi-file">
 					<p:submenu label="New" icon="pi pi-briefcase">
@@ -51,20 +56,6 @@
 						<p:menuitem value="File" url="#" />
 					</p:submenu>
 				</p:submenu>
-
-				<p:submenu label="Actions" icon="pi pi-cog">
-					<p:submenu label="Ajax" icon="pi pi-refresh">
-						<p:menuitem value="Save" icon="pi pi-save" update="messages" />
-						<p:menuitem value="Update" icon="pi pi-refresh" update="messages" />
-					</p:submenu>
-					<p:submenu label="Non-Ajax" icon="pi pi-clone">
-						<p:menuitem value="Delete" icon="pi pi-times" update="messages"
-							ajax="false" />
-					</p:submenu>
-				</p:submenu>
-
-				<p:menuitem value="Quit" url="http://www.primefaces.org"
-					icon="pi pi-times" />
 
 				<f:facet name="options">
 					<p:inputText style="margin:1px 10px 1px 1px;" placeholder="Search" />
